--- a/views/shop/contacte.hbs
+++ b/views/shop/contacte.hbs
@@ -8,6 +8,10 @@
         text-align: center;
     }
 
+    .nav-icon {
+        width: 27px;
+    }
+
     nav>div:nth-child(2) {
         display: flex;
         justify-content: flex-end;
@@ -57,6 +61,12 @@
     ::placeholder {
         color: black !important;
     }
+
+    .contact-button {
+        position: relative;
+        top: -20px;
+        width: 231px;
+    }
 </style>
 <title>Oglinzi.biz</title>
 <div class="not-available-error">
@@ -76,8 +86,7 @@
     <nav>
         <p class="logo">
             <a href="/">oglinzi<span class="biz">.biz</span></a>
-            <span onclick="openNav(80)" class="burger">☰
-            </span>
+            <span onclick="openNav(80)" class="burger">☰</span>
         </p>
         <div>
             <ul class="nav-list">
