--- a/public/assets/css/all.css
+++ b/public/assets/css/all.css
@@ -5916,3 +5916,7 @@ readers do not read off random characters that represent icons */
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
 }
+
+.dropdown-content {
+  width: 36px;
+}
