--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -178,7 +178,7 @@
                 </p>
 
                 <button class="header-button">
-                    Comanda
+                    <a href="/products/1" style="color: white;">Comanda</a>
                 </button>
             </header>
 
