--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -165,6 +165,10 @@
             margin: 50px auto;
         }
     }
+
+    .nav-icon {
+        width: 27px;
+    }
 </style>
 <title>Oglinzi.biz</title>
 
