--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -4,6 +4,30 @@
 <link rel="stylesheet" href="/assets/css/style.css" />
 <link rel="stylesheet" href="/assets/css/all.css" />
 <style>
+    .denumire-oglinda {
+        width: auto;
+        height: auto;
+        opacity: 0.81;
+        background-color: #d33125;
+        font-family: "Gordita", sans-serif;
+        font-size: 37px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.32;
+        letter-spacing: normal;
+        text-align: left;
+        color: #ffffff;
+        padding-left: 33px;
+        padding-top: 7px;
+        position: absolute;
+        right: 0px;
+        top: 327px;
+        overflow: hidden;
+        padding-left: 25px;
+        padding-right: 22px;
+    }
+
     .nav-list2 {
         text-align: center;
     }
