--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -308,6 +308,12 @@
                             Buton Dublu (158$)
                         </p>
                         {{/if}}
+
+                        {{#if this.culoare}}
+                        <p class="inaltime-latime-caracteristica">
+                            Culoarea iluminatiei: {{this.culoare}}
+                        </p>
+                        {{/if}}
                     </div>
                     <div>
                         <a href="/reduce/{{this.item._id}}">
