--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -250,7 +250,7 @@
         </header>
 
         <section class="cart-list">
-            <a href="/">
+            <a href="/products/1">
                 <div class="close">
                     <hr class="left" />
                     <hr class="right" />
@@ -260,8 +260,6 @@
             <p class="cosul">Cosul de cumparaturi</p>
             <br />
             {{# each products }}
-            ss{{this.item.size1}}
-            dd{{this.item.size2}}
             <div class="cart">
                 <img class="cart-image" width="200" height="152" style="position: relative; left: 50px;"
                     src="/uploads/{{ this.item.imagePath }}" alt="" />
