--- a/views/shop/product_template_overview.hbs
+++ b/views/shop/product_template_overview.hbs
@@ -121,6 +121,48 @@
             left: 40px;
         }
     }
+
+    .allready_used_message_1 {
+        background-color: rgb(0, 95, 0);
+        padding: 10px;
+        margin: 0 auto;
+        width: auto;
+        color: white;
+    }
+
+    .allready_used_message_1 {
+        background-color: rgb(0, 95, 0);
+        padding: 36px;
+        width: 286px;
+        color: white;
+        transform: scale(1.5);
+        position: relative;
+        left: -421px;
+        top: 506px;
+        display: block;
+    }
+
+    .fatimes {
+        position: absolute;
+        top: 15px;
+        left: 260px;
+        cursor: pointer;
+    }
+
+    @media screen and (max-width: 1554px) and (min-width: 0) {
+        .allready_used_message_1 {
+            background-color: rgb(0, 95, 0);
+            padding: 36px;
+            width: 286px;
+            color: white;
+            transform: scale(1.5);
+            position: fixed;
+            left: calc(50% - 286px / 2);
+            top: 568px;
+            display: block;
+            z-index: 10000000;
+        }
+    }
 </style>
 <div class="not-available-error">
     <i class="fas fa-exclamation-triangle"></i>
@@ -173,6 +215,12 @@
 
     </nav>
 </header>
+
+{{#if message2}}
+<div class="allready_used_message_1">{{message2}}
+    <i class="fas fa-times fatimes"></i>
+</div>
+{{/if}}
 <form class="detalii" action="/actlikepro" method="POST" style="max-width: 1920px; margin: 0 auto;">
     <div class="first-column">
         <img class="big-image" src="/uploads/{{ products.imagePath }}" alt="">
@@ -309,6 +357,10 @@
 </footer>
 <script src="assets/js/jquery.js"></script>
 <script>
+
+    $('.fatimes').click(() => {
+        $('.allready_used_message_1').css('display', 'none');
+    })
     $(document).ready(function () {
         if ($(".caracteristici-grid > div:nth-child(1) > label:nth-child(6) > input").is(':checked')) {
             $(".caracteristici-grid > div:nth-child(1) > label:nth-child(6) > input").prop("checked", false);
@@ -329,6 +381,10 @@
         if ($(".caracteristici-grid > div:nth-child(2) > label:nth-child(4) > input").is(':checked')) {
             $(".caracteristici-grid > div:nth-child(2) > label:nth-child(4) > input").prop("checked", false);
         };
+
+        if ($(".checkbox_check1").is(':checked')) {
+            $(".caracteristici-grid > div:nth-child(2) > label:nth-child(4) > input").prop("checked", false);
+        };
     });
 
     var pret;
@@ -341,15 +397,15 @@
         pret = $('.pret>span').text();
         $('.badumtss').val(pret);
 
-        if ($('.caseta1').val() < marime1initiala1) {
+        if (parseFloat($('.caseta1').val()) < parseFloat(marime1initiala1)) {
             $('.caseta1').val(marime1initiala1);
         }
 
-        if ($('.caseta2').val() < marime1initiala2) {
+        if (parseFloat($('.caseta2').val()) < parseFloat(marime1initiala2)) {
             $('.caseta2').val(marime1initiala2);
         }
 
-        if ($('.caseta1').val() > 1100) {
+        if (parseFloat($('.caseta1').val()) > 1100) {
             $('.caseta1').val(1100);
         }
 
